--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-image: url('/src/background.jpg');
 }
 
 h1 {
